// Vitest Snapshot v1

exports[`stringifyConfig > should stringify builder config correctly 1`] = `
"{
  tools: {
    webpackChain(chain) {
      chain.devtool(\\"eval\\");
    }
  }
}"
`;

exports[`stringifyConfig > should stringify webpack config correctly 1`] = `
"{
  mode: 'development',
  plugins: [
    {
      definitions: {
        foo: 'bar'
      }
    }
  ]
}"
`;

exports[`stringifyConfig > should stringify webpack config with verbose option correctly 1`] = `
"{
  mode: 'development',
  plugins: [
    {
      definitions: {
        foo: 'bar',
        baz() {
          const a = 1;
          return a;
        }
      }
    }
  ]
}"
`;
